parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMA
    CONCAT
    DEF
    DOBPUNTO
    RANGE
    RETURN

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> imprimir_instr instrucciones
Rule 3     instrucciones -> asignacion_instr instrucciones
Rule 4     instrucciones -> if_instr instrucciones
Rule 5     instrucciones -> elif_instr instrucciones
Rule 6     instrucciones -> else_instr instrucciones
Rule 7     instrucciones -> while_instr instrucciones
Rule 8     instrucciones -> empty
Rule 9     instrucciones -> for_instr instrucciones
Rule 10    if_instr -> IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
Rule 11    if_instr -> IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
Rule 12    if_instr -> IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
Rule 13    elif_instr -> ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
Rule 14    elif_instr -> ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
Rule 15    else_instr -> ELSE LLAVIZQ instrucciones LLAVDER
Rule 16    while_instr -> WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
Rule 17    asignacion_instr -> ID IGUAL expresion PTCOMA
Rule 18    asignacion_instr_increment -> ID IGUAL ID MAS ENTERO PTCOMA
Rule 19    asignacion_instr_increment -> ID IGUAL ID MENOS ENTERO PTCOMA
Rule 20    expresion -> ENTERO
Rule 21    expresion -> DECIMAL
Rule 22    expresion -> STRING
Rule 23    expresion -> ID
Rule 24    imprimir_instr -> PRINT PARIZQ expresion PARDER PTCOMA
Rule 25    imprimir_instr -> PRINT PARIZQ expresion_logica PARDER PTCOMA
Rule 26    expresion_logica -> expresion MENQUE expresion
Rule 27    expresion_logica -> expresion MAYQUE expresion
Rule 28    expresion_logica -> expresion IGUALQUE expresion
Rule 29    expresion_logica -> expresion NIGUALQUE expresion
Rule 30    expresion_logica -> expresion MENIGUAL expresion
Rule 31    expresion_logica -> expresion MAYIGUAL expresion
Rule 32    expresion_logica -> PARIZQ expresion_logica PARDER MENQUE PARIZQ expresion_logica PARDER
Rule 33    expresion_logica -> PARIZQ expresion_logica PARDER MAYQUE PARIZQ expresion_logica PARDER
Rule 34    expresion_logica -> PARIZQ expresion_logica PARDER IGUALQUE PARIZQ expresion_logica PARDER
Rule 35    expresion_logica -> PARIZQ expresion_logica PARDER NIGUALQUE PARIZQ expresion_logica PARDER
Rule 36    expresion_logica -> PARIZQ expresion_logica PARDER MAYIGUAL PARIZQ expresion_logica PARDER
Rule 37    expresion_logica -> PARIZQ expresion_logica PARDER MENIGUAL PARIZQ expresion_logica PARDER
Rule 38    expresion_logica -> PARIZQ expresion_logica PARDER AND PARIZQ expresion_logica PARDER
Rule 39    expresion_logica -> PARIZQ expresion_logica PARDER OR PARIZQ expresion_logica PARDER
Rule 40    expresion_logica -> expresion_logica AND expresion_logica
Rule 41    expresion_logica -> expresion_logica OR expresion_logica
Rule 42    expresion -> expresion MAS expresion
Rule 43    expresion -> expresion MENOS expresion
Rule 44    expresion -> expresion POR expresion
Rule 45    expresion -> expresion DIVIDIDO expresion
Rule 46    for_instr -> FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER
Rule 47    empty -> <empty>

Terminals, with rules where they appear

AND                  : 38 40
BREAK                : 
COMA                 : 
CONCAT               : 
DECIMAL              : 21
DEF                  : 
DIVIDIDO             : 45
DOBPUNTO             : 
ELIF                 : 13 14
ELSE                 : 15
ENTERO               : 18 19 20
FOR                  : 46
ID                   : 17 18 18 19 19 23 46
IF                   : 10 11 12
IGUAL                : 17 18 19
IGUALQUE             : 28 34
IN                   : 46
LLAVDER              : 10 11 12 13 14 15 16 46
LLAVIZQ              : 10 11 12 13 14 15 16 46
MAS                  : 18 42
MAYIGUAL             : 31 36
MAYQUE               : 27 33
MENIGUAL             : 30 37
MENOS                : 19 43
MENQUE               : 26 32
NIGUALQUE            : 29 35
OR                   : 39 41
PARDER               : 10 11 12 13 14 16 24 25 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 46
PARIZQ               : 10 11 12 13 14 16 24 25 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 46
POR                  : 44
PRINT                : 24 25
PTCOMA               : 17 18 19 24 25
RANGE                : 
RETURN               : 
STRING               : 22
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 3
asignacion_instr_increment : 
elif_instr           : 5 11
else_instr           : 6 12 14
empty                : 8
expresion            : 17 24 26 26 27 27 28 28 29 29 30 30 31 31 42 42 43 43 44 44 45 45 46
expresion_logica     : 10 11 12 13 14 16 25 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41
for_instr            : 9
if_instr             : 4
imprimir_instr       : 2
init                 : 0
instrucciones        : 1 2 3 4 5 6 7 9 10 11 12 13 14 15 16 46
while_instr          : 7

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    imprimir_instr                 shift and go to state 3
    asignacion_instr               shift and go to state 4
    if_instr                       shift and go to state 5
    elif_instr                     shift and go to state 6
    else_instr                     shift and go to state 7
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .

    $end            reduce using rule 1 (init -> instrucciones .)


state 3

    (2) instrucciones -> imprimir_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    imprimir_instr                 shift and go to state 3
    instrucciones                  shift and go to state 18
    asignacion_instr               shift and go to state 4
    if_instr                       shift and go to state 5
    elif_instr                     shift and go to state 6
    else_instr                     shift and go to state 7
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 4

    (3) instrucciones -> asignacion_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    asignacion_instr               shift and go to state 4
    instrucciones                  shift and go to state 19
    imprimir_instr                 shift and go to state 3
    if_instr                       shift and go to state 5
    elif_instr                     shift and go to state 6
    else_instr                     shift and go to state 7
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 5

    (4) instrucciones -> if_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    if_instr                       shift and go to state 5
    instrucciones                  shift and go to state 20
    imprimir_instr                 shift and go to state 3
    asignacion_instr               shift and go to state 4
    elif_instr                     shift and go to state 6
    else_instr                     shift and go to state 7
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 6

    (5) instrucciones -> elif_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    elif_instr                     shift and go to state 6
    instrucciones                  shift and go to state 21
    imprimir_instr                 shift and go to state 3
    asignacion_instr               shift and go to state 4
    if_instr                       shift and go to state 5
    else_instr                     shift and go to state 7
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 7

    (6) instrucciones -> else_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    else_instr                     shift and go to state 7
    instrucciones                  shift and go to state 22
    imprimir_instr                 shift and go to state 3
    asignacion_instr               shift and go to state 4
    if_instr                       shift and go to state 5
    elif_instr                     shift and go to state 6
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 8

    (7) instrucciones -> while_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    while_instr                    shift and go to state 8
    instrucciones                  shift and go to state 23
    imprimir_instr                 shift and go to state 3
    asignacion_instr               shift and go to state 4
    if_instr                       shift and go to state 5
    elif_instr                     shift and go to state 6
    else_instr                     shift and go to state 7
    empty                          shift and go to state 9
    for_instr                      shift and go to state 10

state 9

    (8) instrucciones -> empty .

    $end            reduce using rule 8 (instrucciones -> empty .)
    LLAVDER         reduce using rule 8 (instrucciones -> empty .)


state 10

    (9) instrucciones -> for_instr . instrucciones
    (2) instrucciones -> . imprimir_instr instrucciones
    (3) instrucciones -> . asignacion_instr instrucciones
    (4) instrucciones -> . if_instr instrucciones
    (5) instrucciones -> . elif_instr instrucciones
    (6) instrucciones -> . else_instr instrucciones
    (7) instrucciones -> . while_instr instrucciones
    (8) instrucciones -> . empty
    (9) instrucciones -> . for_instr instrucciones
    (24) imprimir_instr -> . PRINT PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> . PRINT PARIZQ expresion_logica PARDER PTCOMA
    (17) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (10) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> . IF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (13) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> . ELIF PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (15) else_instr -> . ELSE LLAVIZQ instrucciones LLAVDER
    (16) while_instr -> . WHILE PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (47) empty -> .
    (46) for_instr -> . FOR PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PRINT           shift and go to state 11
    ID              shift and go to state 12
    IF              shift and go to state 13
    ELIF            shift and go to state 14
    ELSE            shift and go to state 15
    WHILE           shift and go to state 16
    $end            reduce using rule 47 (empty -> .)
    LLAVDER         reduce using rule 47 (empty -> .)
    FOR             shift and go to state 17

    for_instr                      shift and go to state 10
    instrucciones                  shift and go to state 24
    imprimir_instr                 shift and go to state 3
    asignacion_instr               shift and go to state 4
    if_instr                       shift and go to state 5
    elif_instr                     shift and go to state 6
    else_instr                     shift and go to state 7
    while_instr                    shift and go to state 8
    empty                          shift and go to state 9

state 11

    (24) imprimir_instr -> PRINT . PARIZQ expresion PARDER PTCOMA
    (25) imprimir_instr -> PRINT . PARIZQ expresion_logica PARDER PTCOMA

    PARIZQ          shift and go to state 25


state 12

    (17) asignacion_instr -> ID . IGUAL expresion PTCOMA

    IGUAL           shift and go to state 26


state 13

    (10) if_instr -> IF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> IF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> IF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr

    PARIZQ          shift and go to state 27


state 14

    (13) elif_instr -> ELIF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) elif_instr -> ELIF . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr

    PARIZQ          shift and go to state 28


state 15

    (15) else_instr -> ELSE . LLAVIZQ instrucciones LLAVDER

    LLAVIZQ         shift and go to state 29


state 16

    (16) while_instr -> WHILE . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 30


state 17

    (46) for_instr -> FOR . PARIZQ ID IN expresion PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 31


state 18

    (2) instrucciones -> imprimir_instr instrucciones .

    $end            reduce using rule 2 (instrucciones -> imprimir_instr instrucciones .)
    LLAVDER         reduce using rule 2 (instrucciones -> imprimir_instr instrucciones .)


state 19

    (3) instrucciones -> asignacion_instr instrucciones .

    $end            reduce using rule 3 (instrucciones -> asignacion_instr instrucciones .)
    LLAVDER         reduce using rule 3 (instrucciones -> asignacion_instr instrucciones .)


state 20

    (4) instrucciones -> if_instr instrucciones .

    $end            reduce using rule 4 (instrucciones -> if_instr instrucciones .)
    LLAVDER         reduce using rule 4 (instrucciones -> if_instr instrucciones .)


state 21

    (5) instrucciones -> elif_instr instrucciones .

    $end            reduce using rule 5 (instrucciones -> elif_instr instrucciones .)
    LLAVDER         reduce using rule 5 (instrucciones -> elif_instr instrucciones .)


state 22

    (6) instrucciones -> else_instr instrucciones .

    $end            reduce using rule 6 (instrucciones -> else_instr instrucciones .)
    LLAVDER         reduce using rule 6 (instrucciones -> else_instr instrucciones .)


state 23

    (7) instrucciones -> while_instr instrucciones .

    $end            reduce using rule 7 (instrucciones -> while_instr instrucciones .)
    LLAVDER         reduce using rule 7 (instrucciones -> while_instr instrucciones .)


state 24

    (9) instrucciones -> for_instr instrucciones .

    $end            reduce using rule 9 (instrucciones -> for_instr instrucciones .)
    LLAVDER         reduce using rule 9 (instrucciones -> for_instr instrucciones .)


state 25

    (24) imprimir_instr -> PRINT PARIZQ . expresion PARDER PTCOMA
    (25) imprimir_instr -> PRINT PARIZQ . expresion_logica PARDER PTCOMA
    (20) expresion -> . ENTERO
    (21) expresion -> . DECIMAL
    (22) expresion -> . STRING
    (23) expresion -> . ID
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion POR expresion
    (45) expresion -> . expresion DIVIDIDO expresion
    (26) expresion_logica -> . expresion MENQUE expresion
    (27) expresion_logica -> . expresion MAYQUE expresion
    (28) expresion_logica -> . expresion IGUALQUE expresion
    (29) expresion_logica -> . expresion NIGUALQUE expresion
    (30) expresion_logica -> . expresion MENIGUAL expresion
    (31) expresion_logica -> . expresion MAYIGUAL expresion
    (32) expresion_logica -> . PARIZQ expresion_logica PARDER MENQUE PARIZQ expresion_logica PARDER
    (33) expresion_logica -> . PARIZQ expresion_logica PARDER MAYQUE PARIZQ expresion_logica PARDER
    (34) expresion_logica -> . PARIZQ expresion_logica PARDER IGUALQUE PARIZQ expresion_logica PARDER
    (35) expresion_logica -> . PARIZQ expresion_logica PARDER NIGUALQUE PARIZQ expresion_logica PARDER
    (36) expresion_logica -> . PARIZQ expresion_logica PARDER MAYIGUAL PARIZQ expresion_logica PARDER
    (37) expresion_logica -> . PARIZQ expresion_logica PARDER MENIGUAL PARIZQ expresion_logica PARDER
    (38) expresion_logica -> . PARIZQ expresion_logica PARDER AND PARIZQ expresion_logica PARDER
    (39) expresion_logica -> . PARIZQ expresion_logica PARDER OR PARIZQ expresion_logica PARDER
    (40) expresion_logica -> . expresion_logica AND expresion_logica
    (41) expresion_logica -> . expresion_logica OR expresion_logica

    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    STRING          shift and go to state 37
    ID              shift and go to state 38
    PARIZQ          shift and go to state 32

    expresion                      shift and go to state 33
    expresion_logica               shift and go to state 34

state 26

    (17) asignacion_instr -> ID IGUAL . expresion PTCOMA
    (20) expresion -> . ENTERO
    (21) expresion -> . DECIMAL
    (22) expresion -> . STRING
    (23) expresion -> . ID
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion POR expresion
    (45) expresion -> . expresion DIVIDIDO expresion

    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    STRING          shift and go to state 37
    ID              shift and go to state 38

    expresion                      shift and go to state 39

state 27

    (10) if_instr -> IF PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (11) if_instr -> IF PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER elif_instr
    (12) if_instr -> IF PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER else_instr
    (26) expresion_logica -> . expresion MENQUE expresion
    (27) expresion_logica -> . expresion MAYQUE expresion
    (28) expresion_logica -> . expresion IGUALQUE expresion
    (29) expresion_logica -> . expresion NIGUALQUE expresion
    (30) expresion_logica -> . expresion MENIGUAL expresion
    (31) expresion_logica -> . expresion MAYIGUAL expresion
    (32) expresion_logica -> . PARIZQ expresion_logica PARDER MENQUE PARIZQ expresion_logica PARDER
    (33) expresion_logica -> . PARIZQ expresion_logica PARDER MAYQUE PARIZQ expresion_logica PARDER
    (34) expresion_logica -> . PARIZQ expresion_logica PARDER IGUALQUE PARIZQ expresion_logica PARDER
    (35) expresion_logica -> . PARIZQ expresion_logica PARDER NIGUALQUE PARIZQ expresion_logica PARDER
    (36) expresion_logica -> . PARIZQ expresion_logica PARDER MAYIGUAL PARIZQ expresion_logica PARDER
    (37) expresion_logica -> . PARIZQ expresion_logica PARDER MENIGUAL PARIZQ expresion_logica PARDER
    (38) expresion_logica -> . PARIZQ expresion_logica PARDER AND PARIZQ expresion_logica PARDER
    (39) expresion_logica -> . PARIZQ expresion_logica PARDER OR PARIZQ expresion_logica PARDER
    (40) expresion_logica -> . expresion_logica AND expresion_logica
    (41) expresion_logica -> . expresion_logica OR expresion_logica
    (20) expresion -> . ENTERO
    (21) expresion -> . DECIMAL
    (22) expresion -> . STRING
    (23) expresion -> . ID
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion POR expresion
    (45) expresion -> . expresion DIVIDIDO expresion

    PARIZQ          shift and go to state 32
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    STRING          shift and go to state 37
    ID              shift and go to state 38

    expresion_logica               shift and go to state 40
    expresion                      shift and go to state 41

state 28
